--- a/src/views/index.html
+++ b/src/views/index.html
@@ -10,5 +10,5 @@
   <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
   </body>
-  <script src="script.js" type="text/plain"></script>
+  <script src="script.js" type="application/javascript"></script>
 </html>
