--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,6 +3,7 @@
 
   <head>
       <meta charset="UTF-8">
+      <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com">
       <title>Bouncy rectangles</title>
       <style></style>
   </head>
@@ -10,5 +11,5 @@
   <body>
     <canvas id="gameCanvas" width="800" height="600"></canvas>
   </body>
-  <script src="script.js"></script>
+  <script src="script.js" type="application/javascript"></script>
 </html>
